--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "facerecognitionbrain",
   "version": "0.1.0",
+    "engines": {
+    "node": "16.x"
+  },
   "private": true,
   "dependencies": {
     "react": "^17.0.2",
@@ -11,7 +14,7 @@
     "tachyons": "^4.12.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
