--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "facerecognitionbrain",
   "version": "0.1.0",
+  "engines": {
+    "node": "12.16.3",
+    "npm": "6.14.4"
+},
   "private": true,
   "dependencies": {
     "react": "^17.0.2",
